[tool.poetry]
name = "se-interview"
version = "0.1.0"
description = "A simple LangGraph agent with web search capability"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
langgraph = "^0.2"
langchain = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
ddgs = "^9.0"
python-dotenv = "^1.0"
fastapi = ">=0.100.0,<0.115.0"
uvicorn = "^0.32"
requests = "^2.32.5"
arize-phoenix = "12.0.0"
arize-phoenix-otel = "^0.15.0"
openinference-instrumentation-langchain = "0.1.61"
pytz = "^2026.1.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
